# self-evolving-organism

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.sandbox  README.md  pyproject.toml  requirements.txt
.github/workflows/: kernel.yml
config/: experiment_v0.prereg.yaml  nim.pinned.yaml
genomes/seed/: heuristics.py  memory_hooks.py  policy.py
self-evolving-organism-docs/: Artifact Management.md  GitNexus.md  Glossary.md  Home.md  NIM Pin Log.md  Open Decisions.md  Phase 1 Research Package.md  Phase 2 Hardening.md  Phase 2 Scaffold.md  Phase 3 Critic.md  Phase 4 Observer UI.md  Phase 5 Population.md  Phase 6 Hardening.md  Project Overview.md  References.md  Research Brief.md  Roadmap.md  System Map.canvas  Working Rules.md
self-evolving-organism-docs/.obsidian/: app.json
self-evolving-organism-docs/Lineage/: README.md
self-evolving-organism-docs/Mutations/: README.md
self-evolving-organism-docs/Runs/: 2026-07-11-bw-holdout-wh-1783787663.md  2026-07-11-bw-holdout-wh-1783789773.md  2026-07-11-bw-holdout-wh-1783790480.md  README.md  (+22 more)
tests/: test_ablations.py  test_best_of_phenotype.py  test_checkpoints.py  test_critic.py  test_docker_eval.py  test_doctor.py  test_elites.py  test_evolve.py  test_hardening.py  test_lineages.py  test_multiagent.py  test_mutation_loop.py  test_mutation_memory.py  test_observer.py  test_observer_jobs.py  test_phase3_pool.py  test_replay.py  test_runs_export.py  test_safety.py  test_sandbox_adversarial.py  test_selection.py  test_soak_package.py  test_weights_diagnose.py  test_weights_holdout.py  test_world_eval.py
(+42 files in other folders)
